--- a/TelegramClient/TelegramClient.csproj
+++ b/TelegramClient/TelegramClient.csproj
@@ -12,5 +12,9 @@
       <PackageReference Include="TDLib" Version="1.8.45" />
       <PackageReference Include="tdlib.native" Version="1.8.45" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\MyTgClient\MyTgClient.csproj" />
+    </ItemGroup>
     
 </Project>
