Добавлено доп окно для авторизации

--- a/TelegramClient/TelegramClient.csproj
+++ b/TelegramClient/TelegramClient.csproj
@@ -16,5 +16,11 @@
     <ItemGroup>
       <ProjectReference Include="..\MyTgClient\MyTgClient.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="AuthorizForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
+    </ItemGroup>
     
 </Project>
